--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,9 @@ pytest-asyncio==0.19.0
 pytest-env==0.6.2
 PyYAML==6.0.1
 aiohttp_session==2.12.0
+Mako==1.2.4
+MarkupSafe==2.1.3
+SQLAlchemy==2.0.21
+alembic==1.12.0
+greenlet==2.0.2
+typing-extensions==4.8.0
