--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ PyYAML==6.0.1
 aiohttp_session==2.12.0
 Mako==1.2.4
 MarkupSafe==2.1.3
-SQLAlchemy==2.0.21
+SQLAlchemy==1.4.0
 alembic==1.12.0
 greenlet==2.0.2
 typing-extensions==4.8.0
+asyncio==3.4.3
