--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,8 @@ alembic==1.12.0
 greenlet==2.0.2
 typing-extensions==4.8.0
 asyncio==3.4.3
+asyncpg==0.28.0
+certifi==2023.7.22
+requests==2.31.0
+urllib3==2.0.5
+vk_api==11.9.9
